.docker/pg-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: pg-admin
  name: pg-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pg-admin
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/database: "true"
        io.kompose.service: pg-admin
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: otavioalmeida650@gmail.com
            - name: PGADMIN_DEFAULT_PASSWORD
              value: mypassword
            - name: PGADMIN_LISTEN_PORT
              value: "8081"
          image: dpage/pgadmin4:latest
          name: pg-admin
          ports:
            - containerPort: 8081
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: pg-admin-volume
      restartPolicy: Always
      volumes:
        - name: pg-admin-volume
          persistentVolumeClaim:
            claimName: pg-admin-volume
status: {}
