.docker/web-interface-recipes-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.service.expose: localhost
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: web-interface-recipes-tcp
  name: web-interface-recipes-tcp
spec:
  ports:
    - name: "3003"
      port: 3003
      targetPort: 3003
  selector:
    io.kompose.service: web-interface-recipes
  type: LoadBalancer
status:
  loadBalancer: {}
