.docker/persistence-layer-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: persistence-layer
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/persistence-layer: "true"
  podSelector:
    matchLabels:
      io.kompose.network/persistence-layer: "true"
